--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "proxied-fetch": "^1.0.7",
     "vue": "^2.5.16",
-    "vue-flatpickr-component": "^7.0.2"
+    "vue-flatpickr-component": "^7.0.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.10",
@@ -28,7 +30,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "parserOptions": { "ecmaVersion": 2017 }
+    "parserOptions": {
+      "ecmaVersion": 2017
+    }
   },
   "postcss": {
     "plugins": {
