--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "luxon": "^1.3.0",
     "proxied-fetch": "^1.0.7",
     "vue": "^2.5.16",
     "vue-flatpickr-component": "^7.0.2",
