--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "proxied-fetch": "^1.0.9",
     "vue": "^2.5.16",
     "vue-flatpickr-component": "^7.0.2",
+    "vue-google-charts": "^0.3.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
