--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --open",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build && npm run build:lambda",
+    "lint": "vue-cli-service lint",
+    "build:lambda": "rm -rf functions && mkdir functions && cp -r src/functions/* functions"
   },
   "dependencies": {
     "luxon": "^1.3.0",
@@ -19,6 +20,7 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.10",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.10",
     "@vue/cli-service": "^3.0.0-beta.10",
+    "netlify-lambda": "^0.4.0",
     "vue-template-compiler": "^2.5.13"
   },
   "babel": {
