--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --open",
+    "serve": "npm run serve:lambda & vue-cli-service serve --open",
     "build": "vue-cli-service build && npm run build:lambda",
     "lint": "vue-cli-service lint",
-    "build:lambda": "rm -rf functions && mkdir functions && cp -r src/functions/* functions"
+    "build:lambda": "rm -rf functions && mkdir functions && cp -r src/functions/* functions",
+    "serve:lambda": "netlify-lambda serve src/functions"
   },
   "dependencies": {
     "luxon": "^1.3.0",
